--- a/MedicalServicesCentralisationSystem/src/userInterface/MedSupWarehouseAdminWorkArea/MedSupWarehouseDatabase.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/MedSupWarehouseAdminWorkArea/MedSupWarehouseDatabase.form
@@ -32,7 +32,7 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="All tests"/>
+        <Property name="text" type="java.lang.String" value="All Equipment"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
