--- a/MedicalServicesCentralisationSystem/src/userInterface/CustomerSupport/CustomerSupportMemberWorkArea/CustomerSupportMemberWorkAreaJPanel.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/CustomerSupport/CustomerSupportMemberWorkArea/CustomerSupportMemberWorkAreaJPanel.form
@@ -103,10 +103,7 @@
                           <Component id="jButtonDelete" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="178" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonView" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButtonUpdate" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jButtonUpdate" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="96" max="32767" attributes="0"/>
@@ -153,10 +150,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jButtonDelete" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jButtonView" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jButtonDelete" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
@@ -342,11 +336,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldNotesActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButtonView">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="VIEW"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldCustName">
       <Events>
