--- a/MedicalServicesCentralisationSystem/src/userInterface/HospitalManagement/HospitalAdminWorkArea/MedTechnicalAccountsPage.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/HospitalManagement/HospitalAdminWorkArea/MedTechnicalAccountsPage.form
@@ -37,12 +37,15 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="48" style="1"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Lab Testing and Technician"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1020" y="30" width="706" height="-1"/>
+          <AbsoluteConstraints x="440" y="30" width="706" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -61,7 +64,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1770" y="40" width="-1" height="-1"/>
+          <AbsoluteConstraints x="1370" y="50" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -71,7 +74,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1200" y="290" width="540" height="90"/>
+          <AbsoluteConstraints x="800" y="300" width="540" height="90"/>
         </Constraint>
       </Constraints>
 
@@ -136,7 +139,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1200" y="200" width="110" height="40"/>
+          <AbsoluteConstraints x="800" y="210" width="110" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -162,7 +165,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1380" y="200" width="100" height="40"/>
+          <AbsoluteConstraints x="980" y="210" width="100" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -273,7 +276,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="1540" y="200" width="100" height="40"/>
+          <AbsoluteConstraints x="1140" y="210" width="100" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
