--- a/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/DeliveryAgencyAccountsPage.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/DeliveryAgencyAccountsPage.form
@@ -50,10 +50,7 @@
                           <Component id="jButtonDelete" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="178" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonView" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButtonUpdate" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jButtonUpdate" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
@@ -94,10 +91,7 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButtonDelete" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButtonView" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="jButtonDelete" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabelPassword" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -215,11 +209,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldTeamPasswordActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButtonView">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="VIEW"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldTeamID">
       <Events>
