--- a/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/CustomerSupportAccountsPage.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/CustomerSupportAccountsPage.form
@@ -65,7 +65,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="150" y="500" width="787" height="110"/>
+          <AbsoluteConstraints x="130" y="680" width="787" height="110"/>
         </Constraint>
       </Constraints>
 
@@ -134,7 +134,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldTeamName">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="235" y="236" width="351" height="-1"/>
+          <AbsoluteConstraints x="240" y="280" width="351" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -156,14 +156,14 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="894" y="219" width="100" height="40"/>
+          <AbsoluteConstraints x="650" y="420" width="100" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelPassword">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dubai Medium" size="14" style="1"/>
+          <Font name="Dubai Medium" size="16" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Password:"/>
       </Properties>
@@ -189,14 +189,14 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="235" y="198" width="351" height="-1"/>
+          <AbsoluteConstraints x="235" y="198" width="351" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelEmpID">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dubai Medium" size="14" style="1"/>
+          <Font name="Dubai Medium" size="16" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Team ID:"/>
       </Properties>
@@ -231,20 +231,20 @@
     <Component class="javax.swing.JLabel" name="jLabelEmpName">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dubai Medium" size="14" style="1"/>
+          <Font name="Dubai Medium" size="16" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Team Name:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="127" y="239" width="-1" height="-1"/>
+          <AbsoluteConstraints x="120" y="280" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="bgdimg">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/userInterface/Images/DeliveryAgencyAccountsPage_1920x1183.jpeg"/>
+          <Image iconType="3" name="/userInterface/Images/CustomerSupport.png"/>
         </Property>
       </Properties>
       <Constraints>
